CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

PROJECT(ChristmasTree)

FIND_PACKAGE(VTK REQUIRED) 
INCLUDE(${VTK_USE_FILE} ) 

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

ADD_EXECUTABLE(ChristmasTree main.cpp ChristmasScene.cpp AnimationTimerCallback.cpp)

TARGET_LINK_LIBRARIES(ChristmasTree ${ITK_LIBRARIES} ${VTK_LIBRARIES})
